--- a/index.html
+++ b/index.html
@@ -8,12 +8,124 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
     <title>The perfect website!</title>
+
+    <style type="text/css">
+        .main-photo {
+            background:
+                    linear-gradient(
+                            rgba(0, 0, 0, 0.35),
+                            rgba(100, 0, 0, 0.35)
+                    ),
+
+                    url(./images/main-photo.jpg);
+
+            background-size: cover;
+
+            min-height: 690px;
+            margin-top: 50px;
+            padding-top: 170px;
+            padding-bottom: 100px;
+        }
+
+        nav {
+            -webkit-box-shadow: 0 4px 4px -2px #000000;
+            -moz-box-shadow: 0 4px 4px -2px #000000;
+            box-shadow: 0 4px 4px -2px #000000;
+        }
+
+        .companies {
+            margin-top: 20px;
+            margin-bottom: 20px;
+
+            text-align: center;
+        }
+
+        .companies .frame {
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .companies img {
+            max-width: 90%;
+            height: auto;
+
+            opacity: 0.75;
+        }
+    </style>
 </head>
 
 <body>
     <!-- Navbar -->
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark" style="background-color: black !important; padding-top: 20px; padding-bottom: 20px;">
+        <div class="container">
+            <a class="navbar-brand" href="#">Awesome website</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" style="color: white !important;" href="https://facebook.com">Facebook</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" style="color: white !important;" href="https://youtube.com">Youtube</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" style="color: white !important;" href="https://instagram.com">Instagram</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
     <!-- Landing photo -->
+    <div class="main-photo">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-9">
+                    <h1 class="text-white mb-3" style="font-size: 300%; font-weight: bold; padding-bottom: 45px;">Visit us today!</h1>
+                    <p class="text-white" style="font-size: 150%;">We're located in the center of New York City. Amazing prices, amazing food, amazing time.</p>
+                    <p class="text-white" style="font-size: 150%;">Don't forget to bring your family with you. We offer a 50% discount when you order food for multiple people.</p>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="companies">
+        <div class="container">
+            <div class="row">
+
+                <div class="col-6 col-md-3">
+                    <div class="frame">
+                        <img src="./images/amazon.png" />
+                    </div>
+                </div>
+
+
+                <div class="col-6 col-md-3">
+                    <div class="frame">
+                        <img src="./images/facebook.png" />
+                    </div>
+                </div>
+
+                <div class="col-6 col-md-3">
+                    <div class="frame">
+                        <img src="./images/google.png" />
+                    </div>
+                </div>
+
+                <div class="col-6 col-md-3">
+                    <div class="frame">
+                        <img src="./images/microsoft.png" />
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Features -->
 
