--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/main.css" type="text/css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
 
     <title>The perfect website!</title>
 </head>
@@ -86,7 +87,7 @@
 
 
     <!-- About -->
-    <div class="about gray-bg section-item">
+    <div class="about gray-bg section-item" data-aos="zoom-in">
         <div class="container">
 
             <div class="row">
@@ -118,7 +119,7 @@
     </div>
 
     <!-- Features -->
-    <div class="features section-item">
+    <div class="features section-item" data-aos="fade-up-left">
         <div class="container">
 
             <div class="row">
@@ -189,7 +190,7 @@
 
 
     <!-- FAQ -->
-    <div class="faq gray-bg section-item">
+    <div class="faq gray-bg section-item" data-aos="fade-up">
 
         <div class="container">
             <div class="row">
@@ -237,7 +238,7 @@
 
 
     <!-- Social -->
-    <div class="social-pages blue-image-bg section-item">
+    <div class="social-pages blue-image-bg section-item" data-aos="zoom-out">
 
         <div class="container">
             <div class="row">
@@ -286,7 +287,7 @@
 
 
     <!-- Footer -->
-    <footer>
+    <footer data-aos="fade-in">
         <div class="website-info">
 
             <div class="container">
@@ -327,5 +328,12 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init({
+            duration: 1500
+        });
+    </script>
 </body>
 </html>
