aos scroll issue fix

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>The perfect website!</title>
 </head>
 
-<body>
+<body style="overflow-x: hidden;">
     <!-- Navbar -->
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark" style="background-color: black !important; padding-top: 20px; padding-bottom: 20px;">
         <div class="container">
