update aos effects

--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 
 
     <!-- About -->
-    <div class="about gray-bg section-item" data-aos="zoom-in">
-        <div class="container">
+    <div class="about gray-bg section-item">
+        <div class="container" data-aos="zoom-in">
 
             <div class="row">
                 <div class="col-12">
@@ -119,8 +119,8 @@
     </div>
 
     <!-- Features -->
-    <div class="features section-item" data-aos="fade-up-left">
-        <div class="container">
+    <div class="features section-item">
+        <div class="container" data-aos="fade-up-left">
 
             <div class="row">
                 <div class="col-12">
@@ -190,9 +190,9 @@
 
 
     <!-- FAQ -->
-    <div class="faq gray-bg section-item" data-aos="fade-up">
+    <div class="faq gray-bg section-item">
 
-        <div class="container">
+        <div class="container" data-aos="fade-up">
             <div class="row">
                 <div class="col-12">
                     <h2 class="text-center" style="margin-bottom: 25px;">A list of F.A.Q.</h2>
@@ -238,9 +238,9 @@
 
 
     <!-- Social -->
-    <div class="social-pages blue-image-bg section-item" data-aos="zoom-out">
+    <div class="social-pages blue-image-bg section-item">
 
-        <div class="container">
+        <div class="container" data-aos="zoom-out">
             <div class="row">
                 <div class="col-12">
                     <h2 class="text-center" style="margin-bottom: 45px;">Social media</h2>
@@ -287,10 +287,10 @@
 
 
     <!-- Footer -->
-    <footer data-aos="fade-in">
+    <footer>
         <div class="website-info">
 
-            <div class="container">
+            <div class="container" data-aos="fade-in">
                 <div class="row">
 
                     <div class="col-md-7">
